Fix task orchestration: add result passing and validation
Major improvements to task execution:
1. Add task result storage and passing between tasks
2. Include previous task results in context for subsequent tasks
3. Add explicit project context about creating NEW backend files
4. Add file creation examples for tests and scripts
5. Implement task validation to ensure files are created
6. Extract and store task summaries for better orchestration
7. Add backend integration guidance in prompts

This ensures:
- Tasks build on previous results (proper orchestration)
- AI understands it's creating NEW backend integration
- Files are actually created, not just shown
- Tasks are validated before marking complete

--- a/prompts.yaml
+++ b/prompts.yaml
@@ -109,6 +109,17 @@ code:
     
     DO NOT skip ahead or combine tasks!
     
+    CRITICAL FOR BACKEND INTEGRATION TASKS:
+    When asked to create backend integration or tools:
+    1. CREATE NEW Python files - don't modify existing frontend files
+    2. Use the Ollama Python library: import ollama
+    3. The Ollama API runs on http://localhost:11434
+    4. Common endpoints:
+       - GET /api/tags - List available models
+       - POST /api/generate - Generate completion
+       - POST /api/chat - Chat with a model
+    5. ALWAYS use write_file() to create the actual files
+    
     CRITICAL FOR INFORMATION GATHERING TASKS:
     When analyzing or gathering information about a project:
     1. ALWAYS read files COMPLETELY using read_file() - never just read portions
